--- a/admin/sablon.html
+++ b/admin/sablon.html
@@ -17,33 +17,28 @@
 <body>
 
 
-<section id="admincontent">
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2 bg-dark text-white">
-            <h2>Arı Bilgi </h2>
-            <ul class="p-0">
-                <li><a href="dashboard.php">başlangıç</a></li>
-                <li><a href="sayfalar.php">sayfalar</a></li>
-                <li><a href="yazilar.php">yazılar</a></li>
-                <li><a href="yorumlar.php">yorumlar</a></li>
-                <li><a href="kategori.php">kategori</a></li>
-                <li><a href="mesajlar.php">mesajlar</a></li>
-                <li><a href="ebulten.php">e-bülten üyleri</a></li>
-                <li><a href="logout.php">çıkış</a></li>
-            </ul>
+    <section id="adminContent">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-2 bg-dark text-white">
+                    <h2>Arı Bilgi</h2>
+                    <ul class="p-0">
+                        <li><a href="dashboard.php">Başlangıç</a></li>
+                        <li><a href="sayfalar.php">Sayfalar</a></li>
+                        <li><a href="yazilar.php">Yazılar</a></li>
+                        <li><a href="yorumlar.php">Yorumlar</a></li>
+                        <li><a href="kategori.php">Kategoriler</a></li>
+                        <li><a href="mesajlar.php">Mesajlar</a></li>
+                        <li><a href="ebulten.php">E-Bülten Üyeleri</a></li>
+                        <li><a href="logout.php">Çıkış</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-10">
+                    İçerik Alanı
+                </div>
+            </div>
         </div>
-        <div class="col-md-10">
-            içerik alanı
-        </div>
-    </div>
-</div>
-</section>
-
-
-
-
-
+    </section>
 
 
     <script src="../js/jquery.slim.min.js"></script>
