--- a/tesekkurler.html
+++ b/tesekkurler.html
@@ -11,7 +11,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Başlık</title>
+    <title>Arı Bilişim | Mesajınız Alınmıştır</title>
 </head>
 
 <body>
@@ -59,6 +59,21 @@
     </section>
     <!-- Navbar Section End -->
 
+    <!-- Teşekkürler Section Start -->
+
+    <section id="tesekkurler">
+        <div class="container">
+            <div class="row" style="height: 60vh;">
+                <div class="col-6 text-center mx-auto my-auto">
+                    <i class="bi bi-check-circle" style="font-size:64px; color:green;"></i> <br>
+                    <span class="display-4">Teşekkürler</span>
+                    <p>Mesajınız Tarafımıza Ulaşmıştır</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Teşekkürler Section End -->
 
     <!-- footer Section start -->
     <section id="footer" class="py-5 text-white">
